Fix break in search component

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -11,14 +11,7 @@ html, body{
   box-sizing: border-box;
 }
 
-.container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #f1f5f8;
-}
+
 
 
 
